# ohmstudio

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Constants.qml  Helpers.js  LICENSE  Model.qml  README.md  Style.qml  StyledText.qml  View.qml  algebrite.js  audio.cpp  audio.h  audio.hpp  audio.js  backend.cpp  common.h  common.hpp  conductor.cpp  conductor.h  conductor.hpp  config.env  droidbuild  dsp.cpp  dsp.hpp  dsp.js  fileio.cpp  fileio.hpp  func.cpp  func.h  function.cpp  function.hpp  helpers.js  hwio.cpp  index.html  main.cpp  main.py  main.qml  (+40 more)
alsa/: alsa.cc  alsa.node  binding.gyp  package.json
app/: ADModule.qml  ADSRModule.qml  AttenuverterCV.qml  AudioCodecModule.qml  AudioInModule.qml  AudioOutModule.qml  AudioSampleModule.qml  BPFilterModule.qml  BinaryCV.qml  CV.qml  CVController.qml  CVSeqModule.qml  Cable.qml  CableDragView.qml  CableView.qml  CenterItem.qml  ClockDividerModule.qml  ClockModule.qml  CloneVCOModule.qml  Constants.qml  Control.qml  Controller.qml  DelayModule.qml  DesktopEngine.qml  DiscreteCV.qml  DistortionModule.qml  Engine.qml  EngineCourier.qml  EuclideanRhythmModule.qml  ExponentialCV.qml  FlipFlopModule.qml  Fn.qml  GateModule.qml  HPFilterModule.qml  HarmoVCOModule.qml  InJack.qml  InJackView.qml  Jack.qml  JackView.qml  Knob.qml  (+73 more)
app/cv/: LinearCV.qml  qmldir
app/debug/: debug.html
app/engine/: audio.mjs  compiler.mjs  engine.mjs  ohm.mjs  worker.mjs
app/engine/mathjs/: constants.mjs  factoriesAny.mjs  factoriesNumber.mjs  header.mjs
app/engine/tonal/: array.mjs  chord-dictionary.mjs  chord.mjs  midi.mjs  mode.mjs  progression.mjs  scale-dictionary.mjs  scale.mjs
app/jack/: qmldir
app/jack/gate/: GateJack.qml  qmldir
app/module/: qmldir
app/module/clock/: qmldir
app/module/cv/: SlideModule.qml
app/module/envelope/: ADModule.qml
app/module/logic/: NotModule.qml  qmldir
app/module/mix/: qmldir
app/module/multiple/: MultipleModule.qml  qmldir
app/module/osc/: PwmOscModule.qml  SawOscModule.qml  SineOscModule.qml  qmldir
app/module/sequencer/: qmldir
app/module/vca/: VCAModule.qml
app/modules/controls/: KnobModule.qml  ToggleModule.qml
app/modules/cv/: ADModule.qml  QuantizerModule.qml  SlideModule.qml
app/modules/effects/: BPFilterModule.qml  HPFilterModule.qml  LPFilterModule.qml  NotchFilterModule.qml  PeakFilterModule.qml
app/modules/fx/: BPFilterModule.qml  HPFilterModule.qml  LPFilterModule.qml  NotchFilterModule.qml  PeakFilterModule.qml
app/modules/logic/: FlipFlopModule.qml  GateModule.qml  NotModule.qml
app/modules/mix/: MixModule.qml
app/modules/modulation/: ADModule.qml  QuantizerModule.qml  SlideModule.qml  VCAModule.qml
app/modules/noise/: RandomNoiseModule.qml
app/modules/osc/: HarmoOscModule.qml  PwmOscModule.qml  SawOscModule.qml  SineOscModule.qml
app/modules/output/: AudioCodecModule.qml  AudioOutHWModule.qml  DebugModule.qml  OscopeModule.qml  SpectrumModule.qml
app/modules/sequencer/: CVSeqModule.qml  RandSeqModule.qml  StepSeqModule.qml  TrigSeqModule.qml
app/modules/signal/: MixModule.qml  MultipleModule.qml  VCAModule.qml
app/modules/time/: ClockDividerModule.qml  ClockModule.qml  GateModule.qml  SampleHoldModule.qml
app/modules/vco/: HarmoVCOModule.qml  NoiseVCOModule.qml  PwmVCOModule.qml  SawVCOModule.qml  SineVCOModule.qml  TriangleVCOModule.qml
app/patch/: qmldir
app/patches/: autosave.qml  peterepeat.qml  sine.qml
app/ui/: OhmScope.qml  qmldir
brig/: binding.gyp  package-lock.json  package.json
brig/lib/: core.js
brig/src/: QApplication.cpp  QmlEngine.cpp
brig/tools/: cflags.sh  mac-config.sh
cable/: Cable.qml  CableDragView.qml  CableView.qml
connection/: Connection.qml  ConnectionView.qml
cv/: CV.qml
droid/: AndroidManifest.xml
droid/res/drawable/: ic_launcher_foreground.xml
edge/: Edge.qml  EdgeDragView.qml  EdgeView.qml
engine/: audio.js  engine.qrc  math.min.js  native.h  native.html  ohm.js  package.json  wasm.h
engine/alsa/: alsa.cc
engine/node-core-audio/: binding.gyp
engine/node-core-audio/NodeCoreAudio/: NodeCoreAudio.cpp
examples/: basic.qml
jack/: Jack.qml  JackView.qml
jack/gate/: GateJack.qml
jack/in/: InJack.qml  InJackView.qml
jack/in/gate/: GateInJack.qml
module/: Module.qml  ModuleView.qml
module/clock/: ClockModule.qml
module/cv/: SlewLimitModule.qml
module/envelope/: ADSRModule.qml
module/hw/: HwModule.qml
module/hw/audio/: OutAudioHwModule.qml
module/hw/gate/: GateHwModule.qml
module/osc/: WavetableOscModule.qml
module/sequencer/: SequencerModule.qml
module/vca/: VCAModule.qml
modules/logic/: FlipFlopModule.qml
modules/modulation/: ADModule.qml  VCAModule.qml
modules/multiple/: MultipleModule.qml
modules/noise/: RandomNoiseModule.qml
modules/osc/: SineOscModule.qml
modules/output/: AudioCodecModule.qml  OscopeModule.qml
node-core-audio/: node-core-audio.js  package-lock.json  package.json
node-core-audio/NodeCoreAudio/: AudioEngine.cpp
ohm/: Constants.qml  Model.qml  Ohm.qml  OhmEngine.qml  OhmStudio.qml  Style.qml  StyledMenu.qml  qmldir
ohm/cable/: Cable.qml  CableDragView.qml  CableView.qml  qmldir
ohm/cv/: AttenuverterCV.qml  CV.qml  LinearCV.qml  LogScaleCV.qml  QuantCV.qml  qmldir
ohm/dsp/: dsp.js  impl.js  qmldir
ohm/helpers/: Fn.js  qmldir
ohm/jack/: Jack.qml  JackView.qml
ohm/jack/gate/: GateJack.qml
ohm/jack/in/: InJack.qml  InJackView.qml  qmldir
ohm/module/: Module.qml  ModuleView.qml
ohm/module/audio/: AudioModule.qml  OutAudioModule.qml  qmldir
ohm/module/clock/: qmldir  (+2 more)
ohm/patch/: Patch.qml  PatchView.qml
ohm/ui/: CenterItem.qml  OhmButton.qml  OhmFileChoose.qml  OhmPopup.qml  OhmRect.qml  OhmScope.qml  OhmText.qml  Style.qml  qmldir
ohmdroid/: ohmbuild
ohmnix/: ohmbuild  ohmdroid.pro  ohmrun  platform.h
ohmwasm/: index.html  ohmbuild  ohmserve  platform.h
patch/: Patch.qml  PatchView.qml
patch/example/: basic.qml
patches/: autosave.qml
patches/examples/: basic.qml  bootsnpants.qml  kickdrum.qml  oscstack.qml
platform/: native.h  wasm.h
py/: debug.py  dsp.py  main.py
web/: index.html
(+712 files in other folders)
